--- a/campus-errand-wx/miniprogram/app.json
+++ b/campus-errand-wx/miniprogram/app.json
@@ -3,7 +3,10 @@
     "pages/index/index",
     "pages/user/user",
     "pages/logs/logs",
-    "pages/order/order"
+    "pages/order/order",
+    "pages/order/orderHall/orderHall",
+    "pages/order/expressAgent/expressAgent",
+    "pages/order/address/address"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -16,7 +19,16 @@
     "van-grid": "@vant/weapp/grid/index",
     "van-grid-item": "@vant/weapp/grid-item/index",
     "van-cell": "@vant/weapp/cell/index",
-    "van-cell-group": "@vant/weapp/cell-group/index"
+    "van-cell-group": "@vant/weapp/cell-group/index",
+    "van-tab": "@vant/weapp/tab/index",
+    "van-tabs": "@vant/weapp/tabs/index",
+    "van-image": "@vant/weapp/image/index",
+    "van-tag": "@vant/weapp/tag/index",
+    "van-popup": "@vant/weapp/popup/index",
+    "van-picker": "@vant/weapp/picker/index",
+    "van-toast": "@vant/weapp/toast/index",
+    "van-switch": "@vant/weapp/switch/index",
+    "van-submit-bar": "@vant/weapp/submit-bar/index"
   },
   "tabBar": {
     "color": "#7A7E83",
@@ -24,23 +36,25 @@
     "borderStyle": "black",
     "backgroundColor": "#F8F8F8",
     "list": [
-    {
-      "pagePath": "pages/index/index",
-      "text": "首页",
-      "iconPath": "static/image/icon/home.png",
-      "selectedIconPath": "static/image/icon/home-active.png"
-    },      {
-      "text": "订单",
-      "pagePath": "pages/order/order",
-      "iconPath": "static/image/icon/order.png",
-      "selectedIconPath": "static/image/icon/order-active.png"
-    },
-    {
-      "text": "我的",
-      "pagePath": "pages/user/user",
-      "iconPath": "static/image/icon/user.png",
-      "selectedIconPath": "static/image/icon/user-active.png"
-    }]
+      {
+        "pagePath": "pages/index/index",
+        "text": "首页",
+        "iconPath": "static/image/icon/home.png",
+        "selectedIconPath": "static/image/icon/home-active.png"
+      },
+      {
+        "text": "订单",
+        "pagePath": "pages/order/order",
+        "iconPath": "static/image/icon/order.png",
+        "selectedIconPath": "static/image/icon/order-active.png"
+      },
+      {
+        "text": "我的",
+        "pagePath": "pages/user/user",
+        "iconPath": "static/image/icon/user.png",
+        "selectedIconPath": "static/image/icon/user-active.png"
+      }
+    ]
   },
   "sitemapLocation": "sitemap.json"
 }
