--- a/campus-errand-wx/tsconfig.json
+++ b/campus-errand-wx/tsconfig.json
@@ -22,7 +22,8 @@
     "baseUrl": ".",
     "types": ["miniprogram-api-typings"],
     "paths": {
-      "@vant/weapp/*": ["./node_modules/@vant/weapp/dist/*"]
+      "@vant/weapp/*": ["node_modules/@vant/weapp/dist/*"]
+
     },
     "lib": ["ES6"]
   },
